# Katana

./: .gitignore  CMakeLists.txt  config.ini  icon_editor.kra  roadmap.md
BuildTools/bin2header/: README.txt  usage.txt
BuildTools/katana_build/: build_project.py  init_project.py  kt_cmake.py  kt_config.py  kt_util.py
Old/: rigid_body.cpp  rigid_body.hpp
Old/Aurora2input/: input.cpp  input.h  input_keyboard_mouse_win32.h
Old/components/: collider.cpp  collider.hpp  collision_mesh.cpp  collision_sensor.cpp  collision_sensor.hpp  x_collision_shape.hpp
Old/input/: input.cpp  input.hpp  input_device_glfw_kb_mouse.hpp
Source/: animator.hpp  animator_sys.hpp  asset_params.hpp  camera.cpp  camera.hpp  character.hpp  component.cpp  component.hpp  debug_draw.hpp  editor.cpp  editor.hpp  editor_console.hpp  editor_dir_view.hpp  editor_object_inspector.hpp  editor_scene.hpp  editor_scene_tree.hpp  editor_viewport.hpp  event.hpp  g_buffer.hpp  game.cpp  game.hpp  gbuffer.hpp  gfxm.hpp  light.hpp  main.cpp  model.hpp  renderer.hpp  resource.rc  scene.cpp  scene.hpp  scene_from_fbx.hpp  scene_object.cpp  scene_object.hpp  shader_factory.cpp  shader_factory.hpp  skeleton_anim_layer.cpp  skeleton_anim_layer.hpp  skin.hpp  state_machine.hpp  tps_camera.hpp  (+2 more)
Source/common/: _thoughts_world.hpp  angel_script.cpp  angel_script.hpp  animator.hpp  application_state.hpp  behavior_system.hpp  component.cpp  component.hpp  config.hpp  debug_draw.cpp  debug_draw.hpp  draw_list.hpp  draw_primitive.hpp  editor.hpp  editor_dir_view.hpp  editor_object_inspector.hpp  editor_scene_tree.hpp  editor_state.hpp  editor_viewport.hpp  editor_window.hpp  engine.cpp  engine.hpp  event.cpp  event.hpp  g_buffer.hpp  gfxm.hpp  gui_viewport.cpp  gui_viewport.hpp  handle_mgr.hpp  katana_impl.cpp  katana_impl.hpp  kt_cmd.cpp  kt_cmd.hpp  light.hpp  mesh_pool.cpp  mesh_pool.hpp  property.hpp  reflectable.hpp  render_state.hpp  render_test.hpp  (+15 more)
Source/common_old/: asset_params.hpp  audio.hpp  character.hpp  debug_draw.cpp  draw.hpp  game.cpp  game.hpp  gfxm.hpp  model.hpp  renderer.hpp  scene.cpp  scene.hpp  scene_from_fbx.hpp  shader_factory.hpp  skin.hpp  skybox_gradient.hpp  state_machine.hpp  transform.cpp
Source/components/: base_collision_object.hpp  collider.cpp  collider.hpp  collision_component_base.hpp  collision_mesh.cpp  collision_sensor.hpp  collision_shape.hpp  collision_shapes.hpp
Source/data_headers/: file.png.h  file_icon.png.h  txt.png.h  txt16.png.h
Source/editor/: CMakeLists.txt  dialog_save.hpp  doc_action_graph.cpp  doc_action_graph.hpp  doc_anim.cpp  doc_anim.hpp  doc_blend_tree.cpp  doc_blend_tree.hpp  doc_blend_tree_2.cpp  doc_blend_tree_2.hpp  doc_ecs_world.cpp  doc_ecs_world.hpp  doc_game_world.hpp  doc_kt_game_world.hpp  doc_material.cpp  doc_material.hpp  doc_motion.cpp  doc_motion.hpp  doc_render_graph.hpp  editor.cpp  editor.hpp  editor_asset_inspector.cpp  editor_asset_inspector.hpp  editor_dir_view.cpp  editor_dir_view.hpp  editor_doc_audio_clip.cpp  editor_doc_audio_clip.hpp  editor_doc_model_source.cpp  editor_doc_model_source.hpp  editor_doc_scene.cpp  editor_doc_scene.hpp  editor_doc_texture2d.cpp  editor_doc_texture2d.hpp  editor_document.cpp  editor_document.hpp  editor_object_inspector.cpp  editor_object_inspector.hpp  editor_resource_tree.cpp  editor_resource_tree.hpp  editor_scene.hpp  (+21 more)
Source/editor_v2/: CMakeLists.txt  anim_scene_mgr.hpp  draw_list.hpp  draw_state.hpp  editor.cpp  editor.hpp  editor_asset_inspector.cpp  editor_asset_inspector.hpp  editor_component_desc.hpp  editor_dir_view.cpp  editor_dir_view.hpp  editor_object_desc.hpp  editor_object_inspector.cpp  editor_object_inspector.hpp  editor_scene.hpp  editor_scene_inspector.cpp  editor_scene_inspector.hpp  editor_state.hpp  editor_viewport.cpp  editor_viewport.hpp  game_state.hpp  gfx_draw_object.hpp  gfx_scene_mgr.hpp  gui_viewport.hpp  input_listener.hpp  main.cpp  render_scene.hpp  render_viewport.hpp  renderer.hpp  scene_history.hpp  scene_object_from_fbx.hpp  serializable.hpp  serialize_game_scene.cpp  serialize_game_scene.hpp  transform.cpp  transform.hpp  type_map.hpp
Source/editor_v2/asset_view/: anm_view.hpp  fbx_view.hpp  material_view.hpp  texture_view.hpp
Source/editor_v2/behavior/: tps_camera_bhvr.cpp  tps_camera_bhvr.hpp
Source/editor_v2/components/: animation_stack.cpp  animation_stack.hpp  audio_listener.hpp  audio_source.cpp  audio_source.hpp  camera.hpp  collider.cpp  collider.hpp  collision_object.cpp  collision_object.hpp  collision_shape.cpp  collision_shape.hpp  collision_shapes.hpp  component.cpp  component.hpp  constraint_stack.cpp  constraint_stack.hpp  ghost_object.cpp  ghost_object.hpp  light_source.cpp  light_source.hpp  model.cpp  model.hpp  rigid_body.cpp  rigid_body.hpp  volume_trigger_test.hpp
Source/editor_v2/components/constraint/: constraint_collide.cpp  constraint_collide.hpp  constraint_snap.hpp
Source/editor_v2/scene/: actor_object.cpp  actor_object.hpp  character.hpp  game_object.cpp  game_object.hpp  game_scene.cpp  game_scene.hpp  hit_capsule.hpp  scene_controller.hpp  scene_event_mgr.hpp  scene_events.hpp  scene_listener.hpp  scene_object.cpp  scene_object.hpp  stateful_actor.hpp  third_person_camera.hpp
Source/editor_v2/scene/controllers/: actor_ctrl.hpp  anim_controller.hpp  audio_controller.hpp  constraint_ctrl.hpp  dynamics_ctrl.cpp  dynamics_ctrl.hpp  render_controller.hpp
Source/gl/: frame_buffer.hpp  glextutil.cpp  glextutil.h  indexed_mesh.hpp  shader.h  shader_program.cpp  shader_program.h  texture.hpp  vertex_buffer.hpp
Source/input/: input_glfw.hpp  input_mgr.hpp  input_table.hpp
Source/katana/: actor.hpp  game_mode.hpp  katana.hpp  katana_main.cpp  (+2 more)
Source/lib/assimp/contrib/zip/: CMakeLists.txt
Source/old_editor/: CMakeLists.txt  editor_dir_view.hpp  editor_object_inspector.hpp  editor_scene.hpp  editor_state.hpp  main.cpp
Source/test4/: CMakeLists.txt  main.cpp  sess_gameplay.hpp
Source/test4/core/: actor.hpp  scene.hpp  scene_node.hpp  session.hpp
Source/test4/core/util/: fbx_read.hpp
docs/: creating_a_project.md  index.md
(+635 files in other folders)
